css/style.css
html {
	text-align: center;
	font-family: Helvetica;
}

.white-text,li a {
	color:white;
}

.title{
	font-size: 70px;
	font-weight: bold;
}

.background-img {
	background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
	background-color: black;
	background-position: center;
	background-size: auto;
}

.list-properties{
	list-style-type: none;
}

li a {
	font-size: 18px;
}

.header{
	font-size: 32px;
	font-weight: bold;
}

.sub-header{
	font-size: 23px;
	font-weight: bold;
}

.info{
	font-size: 14px;
}

#designed{
	font-weight: bold;
	font-size: 23px;
}

